# IFJ-VUT-BIT-2017-2018

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  README.md  codecov.yml  rozdeleni  rozsireni
benchmark/: CMakeLists.txt  hash_table.cpp  hash_vs_cmp.cpp  lexer.cpp  main.cpp  memory_manager.cpp  reference_benchmark.cpp
dev/debug/: .gdbinit
dev/debug/gdb/: debug_visualizers.py
dev/debug/qtcreator/: debug_visualizers.py
dev/debug/vs/: debug_visualizers.natvis
doc/: Makefile  exp_rules.txt  ll.txt  pre_table.ods  prec_table.csv
doc/internal_functions/: asc.3ac  chr.3ac  length.3ac  substr.3ac
doc/src/: _conclusion.tex  _content.tex  _examples.tex  _ial_data_structs.tex  _introduction.tex  _prec_rules.tex  _prec_table.tex  _project_structure.tex  _team_work.tex  _titlepage.tex  doc.tex  dokumentace.tex
src/: Makefile  char_stack.c  char_stack.h  code_constructor.c  code_constructor.h  code_generator.c  code_generator.h  code_instruction.c  code_instruction.h  code_instruction_operand.c  code_instruction_operand.h  code_optimizer.c  code_optimizer.h  code_optimizer_expr.c  code_optimizer_expr.h  common.c  common.h  data_type.c  data_type.h  debug.h  dynamic_string.c  dynamic_string.h  error.c  error.h  ial.c  ial.h  ifj2017.c  ifj2017.h  instruction.h  interpreter.c  interpreter.h  lexer.c  lexer.h  lexer_fsm.c  lexer_fsm.h  llist.c  llist.h  memory.c  memory.h  memory_debug.c  (+51 more)
test/: CMakeLists.txt  char_stack.cpp  code_generator.cpp  code_instruction_operand.cpp  dynamic_string.cpp  expr.cpp  hash_table.cpp  hash_table_typed.cpp  interpreter.cpp  lexer.cpp  lexer_fsm.cpp  llist.cpp  main.cpp  memory_manager.cpp  parser.cpp  parser_semantic.cpp  set_int.cpp  setint.cpp  stack_code_label.cpp  stringbycharprovider.cpp  symbol_function.cpp  symbol_register.cpp  symbol_table.cpp  symbol_table_typed.cpp  tokenizer.cpp
test/utils/: functioncallcounter.h  functioncallcounter.tpp  stringbycharprovider.cpp  stringbycharprovider.h
utils/: .gdbinit  DownloadProject.cmake  benchmark.sh  codecov.sh  debug_visualizers.natvis  debug_vizualisers.py  integration-test.sh
utils/plotly/: benchmark_results_template.json  plotly_init.py  plotly_upload_results.py
